--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "pdftools.doc.tar.xz": 461f3b695f9f0d01b6701328c04a70ef6d6a670b
-  "pdftools.tar.xz": 4f5e655d36a0c60ab5ae7576a24645d79160b100
+  pdftools.doc.tar.xz: c9cb6cd2e266d0c07703b7b02a68eecab5ed3514
+  pdftools.tar.xz: de33550a4b18097684c7218fc1c51241a02b995b
